<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewOutput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/zero"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="23 * 784" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOutput">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/buttonExponent"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_button"
                android:text="@string/exponent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonPi"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/round_button"
                android:text="@string/pi"
                android:textAllCaps="false"
                app:layout_constraintBaseline_toBaselineOf="@+id/buttonExponent"
                app:layout_constraintEnd_toStartOf="@+id/buttonBackspace"
                app:layout_constraintStart_toEndOf="@+id/buttonExponent" />

            <Button
                android:id="@+id/buttonBackspace"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/round_button"
                android:backgroundTint="?attr/colorClear"
                android:text="@string/back"
                app:backgroundTint="@null"
                app:layout_constraintBaseline_toBaselineOf="@+id/buttonExponent"
                app:layout_constraintEnd_toStartOf="@+id/buttonClear"
                app:layout_constraintStart_toEndOf="@+id/buttonPi" />

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_button"
                android:backgroundTint="?attr/colorClear"
                android:text="@string/clear"
                app:backgroundTint="@null"
                app:layout_constraintBaseline_toBaselineOf="@+id/buttonExponent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/buttonParenLeft"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_button"
                android:text="@string/paren_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonExponent" />

            <Button
                android:id="@+id/buttonParenRight"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/round_button"
                android:text="@string/paren_right"
                app:layout_constraintBaseline_toBaselineOf="@+id/buttonParenLeft"
                app:layout_constraintEnd_toStartOf="@+id/buttonMod"
                app:layout_constraintStart_toEndOf="@id/buttonParenLeft" />

            <Button
                android:id="@+id/buttonMod"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/round_button"
                android:text="@string/mod"
                app:layout_constraintBaseline_toBaselineOf="@+id/buttonParenLeft"
                app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
                app:layout_constraintStart_toEndOf="@id/buttonParenRight" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_button"
                android:backgroundTint="?attr/colorOp"
                android:text="@string/divide"
                app:backgroundTint="@null"
                app:layout_constraintBaseline_toBaselineOf="@+id/buttonParenLeft"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/button7"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_button"
                android:backgroundTint="?attr/colorNum"
                android:text="@string/seven"
                app:backgroundTint="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonParenLeft" />

            <Button
                android:id="@+id/button8"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/round_button"
                android:backgroundTint="?attr/colorNum"
                android:text="@string/eight"
                app:backgroundTint="@null"
                app:layout_constraintBaseline_toBaselineOf="@+id/button7"
                app:layout_constraintEnd_toStartOf="@+id/button9"
                app:layout_constraintStart_toEndOf="@id/button7" />

            <Button
                android:id="@+id/button9"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/round_button"
                android:backgroundTint="?attr/colorNum"
                android:text="@string/nine"
                app:backgroundTint="@null"
                app:layout_constraintBaseline_toBaselineOf="@+id/button7"
                app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
                app:layout_constraintStart_toEndOf="@id/button8" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_button"
                android:backgroundTint="?attr/colorOp"
                android:text="@string/multiply"
                app:backgroundTint="@null"
                app:layout_constraintBaseline_toBaselineOf="@+id/button7"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/button4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_button"
                android:backgroundTint="?attr/colorNum"
                android:text="@string/four"
                app:backgroundTint="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button7" />

            <Button
                android:id="@+id/button5"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/round_button"
                android:backgroundTint="?attr/colorNum"
                android:text="@string/five"
                app:backgroundTint="@null"
                app:layout_constraintBaseline_toBaselineOf="@+id/button4"
                app:layout_constraintEnd_toStartOf="@+id/button6"
                app:layout_constraintStart_toEndOf="@id/button4" />

            <Button
                android:id="@+id/button6"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/round_button"
                android:backgroundTint="?attr/colorNum"
                android:text="@string/six"
                app:backgroundTint="@null"
                app:layout_constraintBaseline_toBaselineOf="@+id/button4"
                app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
                app:layout_constraintStart_toEndOf="@id/button5" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_button"
                android:backgroundTint="?attr/colorOp"
                android:text="@string/minus"
                app:backgroundTint="@null"
                app:layout_constraintBaseline_toBaselineOf="@+id/button4"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/button1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_button"
                android:backgroundTint="?attr/colorNum"
                android:text="@string/one"
                app:backgroundTint="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button4" />

            <Button
                android:id="@+id/button2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/round_button"
                android:backgroundTint="?attr/colorNum"
                android:text="@string/two"
                app:backgroundTint="@null"
                app:layout_constraintBaseline_toBaselineOf="@+id/button1"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                app:layout_constraintStart_toEndOf="@id/button1" />

            <Button
                android:id="@+id/button3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/round_button"
                android:backgroundTint="?attr/colorNum"
                android:text="@string/three"
                app:backgroundTint="@null"
                app:layout_constraintBaseline_toBaselineOf="@+id/button1"
                app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
                app:layout_constraintStart_toEndOf="@id/button2" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_button"
                android:backgroundTint="?attr/colorOp"
                android:text="@string/plus"
                app:backgroundTint="@null"
                app:layout_constraintBaseline_toBaselineOf="@+id/button1"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/button0"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/round_button"
                android:backgroundTint="?attr/colorNum"
                android:text="@string/zero"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button1" />

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/round_button"
                android:text="@string/dot"
                app:layout_constraintBaseline_toBaselineOf="@+id/button0"
                app:layout_constraintEnd_toStartOf="@+id/buttonNegative"
                app:layout_constraintStart_toEndOf="@id/button0" />

            <Button
                android:id="@+id/buttonNegative"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/round_button"
                android:text="@string/negative"
                app:layout_constraintBaseline_toBaselineOf="@+id/button0"
                app:layout_constraintEnd_toStartOf="@+id/buttonEquals"
                app:layout_constraintStart_toEndOf="@id/buttonDot" />

            <Button
                android:id="@+id/buttonEquals"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_button"
                android:backgroundTint="?attr/colorEval"
                android:text="@string/equals"
                app:backgroundTint="@null"
                app:layout_constraintBaseline_toBaselineOf="@+id/button0"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>